<resources>
    <string name="app_name">Intervals</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="exercise_name_hint">Exercise name</string>
    <string name="affects">Affects:</string>
    <string name="chest">Chest</string>
    <string name="back">Back</string>
    <string name="legs">Legs</string>
    <string name="abs">Abs</string>
    <string name="biceps">Biceps</string>
    <string name="triceps">Triceps</string>
    <string name="shoulders">Shoulders</string>
    <string name="cardio">Cardio</string>
    <string name="exercise_time">Exercise time</string>
    <string name="break_time">Break time</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_interval">Create Interval</string>
</resources>
